--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="menu_mypage">마이페이지</string>
     <string name="menu_logout">로그아웃</string>
     <string name="next">Next</string>
+    <string name="add">추가</string>
 
     <string name="previous">Previous</string>
     <string name="start">시작</string>
