--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="menu_mypage">마이페이지</string>
     <string name="menu_logout">로그아웃</string>
     <string name="favorite">즐겨찾기</string>
+    <string name="hint_chat">메시지를 입력하세요</string>
+    <string name="send">보내기</string>
     <string name="next">Next</string>
     <string name="add">추가</string>
     <string name="kakao_native_app_key">b5179c6395c6c6dc6dbc677be8a8a4db</string>
